--- a/build.gradle
+++ b/build.gradle
@@ -8,8 +8,10 @@ dependencies {
 	compile(
 		"dom4j:dom4j:1.6.1",
 		"org.slf4j:slf4j-api:1.7.21",
-		'javax.servlet:servlet-api:2.5',
+		'javax.servlet:javax.servlet-api:3.0.1',
+		'javax.servlet.jsp:javax.servlet.jsp-api:2.2.1',
 		'com.alibaba:fastjson:1.2.17',
+		'commons-fileupload:commons-fileupload:1.3',
 		'commons-collections:commons-collections:3.2',
 		"org.springframework:spring-web:3.2.4.RELEASE", 
 		"org.springframework:spring-webmvc:3.2.4.RELEASE",
